--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,5 @@
 language: android
-
-machine:
-java:
-version: openjdk8
-environment:
-ANDROID_HOME: /usr/local/android-sdk-linux
-
+jdk: oraclejdk8
 android:
   components:
     # Uncomment the lines below if you want to
