--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,5 @@ android:
     # use the latest revision of Android SDK Tools
     - platform-tools
     - tools
+    - build-tools-25.0.0
+    - android-25
