--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,23 @@
 language: android
-jdk: oraclejdk8
 android:
   components:
-    # Uncomment the lines below if you want to
-    # use the latest revision of Android SDK Tools
-    - platform-tools
     - tools
-    - build-tools-25.0.0
-    - android-25
+    - build-tools-24.0.1
+    - android-24
+    - platform-tools
+    - extra-android-support # because I'm use support library
+  licenses:
+    - '.+'
+
+sudo: required
+
+jdk:
+  - oraclejdk8
+
+install: true
+
+before_script:
+  - chmod +x gradlew
+
+script:
+  - ./gradlew assembleRelease --stacktrace
