--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ android:
     - build-tools-24.0.1
     - android-24
     - platform-tools
-    - extra-android-support # because I'm use support library
+    - extra-android-support
   licenses:
     - '.+'
 
@@ -20,4 +20,4 @@ before_script:
   - chmod +x gradlew
 
 script:
-  - ./gradlew assembleRelease --stacktrace
+  - ./gradlew assembleDebug --stacktrace
